# cardinal-vote

./: .dockerignore  .env.example  .env.production.example  .eslintignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  API.md  API_DOCUMENTATION.md  CHANGES.md  CLAUDE.md  DEPLOYMENT-TAR.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  PRP-Generalized-Platform.md  PRP.md  README.md  REVISED-TIMELINE-VERTICAL-SLICES.md  SECURITY.md  TEST_SUITE_SUMMARY.md  WORKFLOW-GENERALIZED.md  alembic.ini  deploy-from-tar.sh  deploy-server.sh  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.standalone.yml  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  test.env  (+1 more)
.github/: BRANCH_PROTECTION.md  CODEOWNERS  branch-protection.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-compose-test.yml  release.yml
alembic/: env.py
alembic/versions/: 3f871632aa93_add_user_id_to_voter_responses.py  5d84f7a200dd_remove_legacy_admin_sessions_table.py  8d1480278da2_add_row_level_security_policies.py  b9061c1f6adb_initial_generalized_platform_schema.py  bff158c3e8a6_add_content_moderation_tables.py  c97e220ce164_add_moderation_query_optimization_.py
docs/: ARCHITECTURE.md  DATABASE-MIGRATION.md  PRP-001-Frontend-Testing-Strategy.md  SECURITY-AUDIT.md  VOLUME-MIGRATION.md
docs/audit/: affected-files.txt
docs/brainstorming/: 2025-01-07-generalized-platform-planning.md  2025-01-13-web-interface-architecture-validation.md  2025-09-08-toveco-to-cardinal-vote-rename.md  2025-09-13-remove-legacy-compatibility.md
docs/context/: SOLID.md
docs/prps/: cardinal-vote-rename.md  generalized-voting-platform.md  remove-legacy-compatibility.md  sprint-1-foundation-recovery.md
docs/tasks/: cardinal-vote-rename.md  cleanup_tasks.md  remove-legacy-compatibility.md  sprint-1-foundation-recovery.md
docs/templates/: brainstorming_session_template.md  prp_document_template.md  technical-task-template.md
scripts/: deploy.sh  init_db.sql  manage.sh  run.sh  validate-env.py
src/cardinal_vote/: __init__.py  admin_auth.py  admin_manager.py  admin_middleware.py  admin_routes_simple.py  auth_manager.py  auth_routes.py  captcha_service.py  config.py  database.py  database_manager.py  dependencies.py  email_service.py  env_validator.py  image_service.py  input_sanitizer.py  main.py  models.py  rate_limiting.py  super_admin_manager.py  super_admin_routes.py  (+2 more)
static/: app.js  auth.css  auth_login.js  auth_register.js  dashboard.css  dashboard.js  landing.js  legacy_app.js  public_vote.css  public_vote.js  style.css
templates/: auth_login.html  auth_register.html  dashboard.html  index.html  landing.html  landing_material.html  legacy_index.html  public_vote.html  results.html
tests/: README.md  __init__.py  auth-modals.test.js  conftest.py  fixtures.py  manual_frontend_tests.py  setup.js  test_api.py  test_captcha_service.py  test_captcha_vote_integration.py  test_comprehensive_api.py  test_database_integrity.py  test_docker_deployment.py  test_end_to_end_workflow.py  test_env_validator.py  test_fixtures.py  test_frontend_integration.py  test_image_service.py  test_image_upload_integration.py  test_input_sanitizer.py  test_integration_postgresql.py  test_main.py  test_manual_frontend.py  test_performance_load.py  test_rate_limiting.py  test_runner.py  test_super_admin_auth.py  test_super_admin_integration.py  test_super_admin_manager.py  test_super_admin_routes.py  test_vote_moderation_integration.py  test_vote_moderation_manager.py  test_vote_moderation_routes.py
(+38 files in other folders)
